--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,14 @@ python:
   - "2.7"
 
 # command to install dependencies
-install:
-# command to run tests
-script: python tests.py
-
 before_install:
   - pip install codecov
+
+install:
+# command to run tests
+script:
+  - python tests.py
+  - coverage run tests.py
+
 after_success:
   - codecov
