--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 
 # command to install dependencies
 before_install:
-  - pip install codecov
+  - pip install codecov pyserial
 
 install:
 # command to run tests
